// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LoadingPage correctly 1`] = `
<div
  className="loader"
>
  <div
    className="loader__content"
  >
    <img
      alt=""
      className="loader__image"
      height="200"
      src="test-file-stub"
      width="200"
    />
    <p
      className="loader__text"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`should render LoadingPage correctly with props 1`] = `
<div
  className="loader"
>
  <div
    className="loader__content"
  >
    <img
      alt=""
      className="loader__image"
      height="98"
      src="test-file-stub"
      width="262"
    />
  </div>
</div>
`;
